--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p style="color: wheat;">I'm a <span class="typing-text"></span></p>
       </div>
 
-      <a href="#about" class="btn"><span>About Me</span>
+      <a href="https://drive.google.com/file/d/18hL_V0U09m-n3S08oKCzWd_SYXLbzvQb/view?usp=sharing" class="btn"><span>About Me</span>
         <i class="fas fa-arrow-circle-down"></i>
       </a>
       <div class="socials">
