--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         <span class="tag">Full Stack Developer</span>
 
         <p>I am a Web developer based in Mumbai, India.
-          I am an Information Technology undergraduate from slrtce.
-          I am very passionate about improving my coding skills & developing applications & websites.
+          Web Developer with 1.5 years of experience in web development and
+          strong skills in HTML, CSS, and JavaScript. Proficient in Node.js, Java and
+          Python.I am very passionate about improving my coding skills & developing applications & websites.
           Working for myself to improve my skills.
           Love to build Full-Stack clones. </p>
 
@@ -92,7 +93,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="#" target="_blank" class="btn"><span>Resume</span>
+          <a href="https://drive.google.com/file/d/18hL_V0U09m-n3S08oKCzWd_SYXLbzvQb/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
@@ -171,7 +172,7 @@
             <h3>JavaScript</h3>
             <div class="progress">
               <div class="progress-bar" style="width: 50%; background-color: #9e8704;"></div>
-              <div class="progress-value">50% </div>
+              <div class="progress-value">80% </div>
             </div>
           </div>
 
@@ -179,7 +180,7 @@
             <h3>Mogodb</h3>
             <div class="progress">
               <div class="progress-bar" style="width: 40%; background-color: #09913d;"></div>
-              <div class="progress-value">40% </div>
+              <div class="progress-value">50% </div>
             </div>
           </div>
 
@@ -218,12 +219,13 @@
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
   
     <div class="project-container">
-      <div class="box"><img src="./assets/paytm clone.png" alt=""><div class="project-title">Paytm Clone</div></div>
-      <div class="box"><img src="./assets/nodemail.png" alt=""><div class="project-title">Send Emails with Nodemailer using Ethereal</div></div>
+      <div class="box"><a href="https://github.com/JATINMOUR/Paytm-clone"><img src="./assets/paytm clone.png" alt=""></a><div class="project-title">Paytm Clone</div></div>
 
-      <div class="box"><img src="./assets/Dynamic Quotes Website.png" alt=""><div class="project-title"> Dynamic Quotes Website</div></div>
+      <div class="box"><a href="https://github.com/JATINMOUR/Project---News"><img src="./assets/nodemail.png" alt=""></a><div class="project-title">Send Emails with Nodemailer using Ethereal</div></div>
 
-      <div class="box"><img src="./assets/weather.png" alt=""><div class="project-title">Live weather website</div></div>
+      <div class="box"><a href=""><img src="./assets/Dynamic Quotes Website.png" alt=""></a><div class="project-title"> Dynamic Quotes Website</div></div>
+
+      <div class="box"><a href="https://github.com/JATINMOUR/Weather-website"><img src="./assets/weather.png" alt=""></a><div class="project-title">Live weather website</div></div>
     </div>
    
       
