--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row">
 
       <div class="image">
-        <img draggable="false" class="tilt" src="/assets/me (2).jpeg" alt="">
+        <img draggable="false" class="tilt" src="/assets/me.png" alt="">
       </div>
       <div class="content">
         <h3>I'm Jateen</h3>
